--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+    <color name="color_797d86">#797D86</color>
+    <color name="color_636b7d">#636B7D</color>
     <color name="color_35373d">#35373D</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
