--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,6 +106,35 @@
                             android:text="@string/device_info"
                             app:drawableLeftCompat="@drawable/device_info_icon" />
 
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:paddingStart="10dp"
+                            android:paddingTop="5dp"
+                            android:paddingEnd="10dp"
+                            android:paddingBottom="0.5dp" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:paddingStart="20dp"
+                            android:paddingTop="1dp"
+                            android:paddingEnd="20dp"
+                            android:paddingBottom="1dp"
+                            android:text="@string/other"
+                            android:textColor="@color/black"
+                            android:textSize="12sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/navSetting"
+                            style="@style/NavigationView"
+                            android:drawablePadding="15dp"
+                            android:focusable="true"
+                            android:onClick="@{() -> activity.navSetting()}"
+                            android:text="@string/setting"
+                            app:drawableLeftCompat="@drawable/settings_icon" />
+
                     </LinearLayout>
 
                 </ScrollView>
