--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -56,7 +56,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:layout_marginEnd="15dp"
-                    android:checked="@{viewModel.isUseHyphen()}"
+                    android:checked="@={viewModel.isUseHyphen()}"
                     android:focusable="false"
                     app:layout_constraintBottom_toBottomOf="@id/TextView_is_use_hyphen"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -94,7 +94,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:layout_marginEnd="15dp"
-                    android:checked="@{viewModel.isCaptureBlock()}"
+                    android:checked="@={viewModel.isCaptureBlock()}"
                     android:focusable="false"
                     app:layout_constraintBottom_toBottomOf="@id/TextView_is_block_capture"
                     app:layout_constraintEnd_toEndOf="parent"
